// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'acala' to 'assetHubPolkadot' using bridgeSDK cross-chain 'USDT' > Cross-chain using BridgeSDK works > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 6,
  "fromChain": 998,
  "toChain": "(rounded 1000)",
}
`;

exports[`'acala' to 'assetHubPolkadot' using bridgeSDK cross-chain 'USDT' > Cross-chain using BridgeSDK works > fee 1`] = `0`;

exports[`'acala' to 'assetHubPolkadot' using bridgeSDK cross-chain 'USDT' > Cross-chain using BridgeSDK works > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 6,
  "fromChain": 1000,
  "toChain": 1000,
}
`;

exports[`'acala' to 'astar' using bridgeSDK cross-chain 'AUSD' > Cross-chain using BridgeSDK works > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 8,
  "toChain": "(rounded 12)",
}
`;

exports[`'acala' to 'astar' using bridgeSDK cross-chain 'AUSD' > Cross-chain using BridgeSDK works > fee 1`] = `"(rounded 0.00006)"`;

exports[`'acala' to 'astar' using bridgeSDK cross-chain 'AUSD' > Cross-chain using BridgeSDK works > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 10,
  "toChain": 10,
}
`;

exports[`'acala' to 'interlay' using bridgeSDK cross-chain 'INTR' > Cross-chain using BridgeSDK works > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": 8,
  "toChain": "(rounded 100000)",
}
`;

exports[`'acala' to 'interlay' using bridgeSDK cross-chain 'INTR' > Cross-chain using BridgeSDK works > fee 1`] = `"(rounded 0.002)"`;

exports[`'acala' to 'interlay' using bridgeSDK cross-chain 'INTR' > Cross-chain using BridgeSDK works > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": 10,
  "toChain": 100000,
}
`;

exports[`'acala' to 'moonbeam' using bridgeSDK cross-chain 'AUSD' > Cross-chain using BridgeSDK works > after 1`] = `
{
  "address": "0x4E7440dB498561A46AAa82b9Bc7d2D5162b5c27B",
  "decimals": 18,
  "fromChain": 8,
  "toChain": "(rounded 1.97)",
}
`;

exports[`'acala' to 'moonbeam' using bridgeSDK cross-chain 'AUSD' > Cross-chain using BridgeSDK works > fee 1`] = `"(rounded 0.03)"`;

exports[`'acala' to 'moonbeam' using bridgeSDK cross-chain 'AUSD' > Cross-chain using BridgeSDK works > initial 1`] = `
{
  "address": "0x4E7440dB498561A46AAa82b9Bc7d2D5162b5c27B",
  "decimals": 18,
  "fromChain": 10,
  "toChain": 0,
}
`;

exports[`'acala' to 'polkadot' using bridgeSDK cross-chain 'DOT' > Cross-chain using BridgeSDK works > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": 998,
  "toChain": "(rounded 1000)",
}
`;

exports[`'acala' to 'polkadot' using bridgeSDK cross-chain 'DOT' > Cross-chain using BridgeSDK works > fee 1`] = `"(rounded 0.002)"`;

exports[`'acala' to 'polkadot' using bridgeSDK cross-chain 'DOT' > Cross-chain using BridgeSDK works > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": 1000,
  "toChain": 1000,
}
`;

exports[`'assetHubPolkadot' to 'acala' using bridgeSDK cross-chain 'USDT' > Cross-chain using BridgeSDK works > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 6,
  "fromChain": 998,
  "toChain": "(rounded 2)",
}
`;

exports[`'assetHubPolkadot' to 'acala' using bridgeSDK cross-chain 'USDT' > Cross-chain using BridgeSDK works > fee 1`] = `"(rounded 0.0008)"`;

exports[`'assetHubPolkadot' to 'acala' using bridgeSDK cross-chain 'USDT' > Cross-chain using BridgeSDK works > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 6,
  "fromChain": 1000,
  "toChain": 0,
}
`;

exports[`'assetHubPolkadot' to 'polkadot' using bridgeSDK cross-chain 'DOT' > Cross-chain using BridgeSDK works > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": "(rounded 998)",
  "toChain": "(rounded 1000)",
}
`;

exports[`'assetHubPolkadot' to 'polkadot' using bridgeSDK cross-chain 'DOT' > Cross-chain using BridgeSDK works > fee 1`] = `"(rounded 0.002)"`;

exports[`'assetHubPolkadot' to 'polkadot' using bridgeSDK cross-chain 'DOT' > Cross-chain using BridgeSDK works > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": 1000,
  "toChain": 1000,
}
`;

exports[`'astar' to 'acala' using bridgeSDK cross-chain 'AUSD' > Cross-chain using BridgeSDK works > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 8,
  "toChain": "(rounded 1000)",
}
`;

exports[`'astar' to 'acala' using bridgeSDK cross-chain 'AUSD' > Cross-chain using BridgeSDK works > fee 1`] = `"(rounded 0.001)"`;

exports[`'astar' to 'acala' using bridgeSDK cross-chain 'AUSD' > Cross-chain using BridgeSDK works > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 10,
  "toChain": 1000,
}
`;

exports[`'interlay' to 'acala' using bridgeSDK cross-chain 'INTR' > Cross-chain using BridgeSDK works > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": "(rounded 100000)",
  "toChain": "(rounded 1.99)",
}
`;

exports[`'interlay' to 'acala' using bridgeSDK cross-chain 'INTR' > Cross-chain using BridgeSDK works > fee 1`] = `"(rounded 0.006)"`;

exports[`'interlay' to 'acala' using bridgeSDK cross-chain 'INTR' > Cross-chain using BridgeSDK works > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": 100000,
  "toChain": 0,
}
`;

exports[`'polkadot' to 'acala' using bridgeSDK cross-chain 'DOT' > Cross-chain using BridgeSDK works > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": "(rounded 998)",
  "toChain": "(rounded 1000)",
}
`;

exports[`'polkadot' to 'acala' using bridgeSDK cross-chain 'DOT' > Cross-chain using BridgeSDK works > fee 1`] = `"(rounded 0.0001)"`;

exports[`'polkadot' to 'acala' using bridgeSDK cross-chain 'DOT' > Cross-chain using BridgeSDK works > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": 1000,
  "toChain": 1000,
}
`;

exports[`'polkadot' to 'assetHubPolkadot' using bridgeSDK cross-chain 'DOT' > Cross-chain using BridgeSDK works > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": "(rounded 998)",
  "toChain": "(rounded 1000)",
}
`;

exports[`'polkadot' to 'assetHubPolkadot' using bridgeSDK cross-chain 'DOT' > Cross-chain using BridgeSDK works > fee 1`] = `"(rounded 0.002)"`;

exports[`'polkadot' to 'assetHubPolkadot' using bridgeSDK cross-chain 'DOT' > Cross-chain using BridgeSDK works > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": 1000,
  "toChain": 1000,
}
`;
